hphp/hack/test/typecheck/enum_class_label/memoized_lsb_invalid_syntax.php
<?hh

class Bar {
  <<__MemoizeLSB("Bar")>>
  public static function foo(): void {}
}
